# m3-to-glb

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: cli.rs  main.rs
src/assets/: mod.rs
src/glb/: json_builder.rs  ktx2.rs  mod.rs
src/m3/: mod.rs  reader.rs  structures.rs
src/processor/: anim.rs  mod.rs  soa.rs  transform.rs
