[package]
name = "m3-to-glb"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "Fast Rust converter from Blizzard M3 (StarCraft II / Heroes of the Storm) to glTF 2.0 Binary."
repository = "https://github.com/AestroFidelium/m3-to-glb"

[dependencies]
anyhow = "1"
ahash = "0.8"
crossbeam-channel = "0.5"
dirs-next = "2"
memchr = "2"
mimalloc = { version = "0.1", default-features = false }
multiversion = "0.7"
rayon = "1"
smallvec = { version = "1", features = ["union"] }
wide = "0.7"
tracing = "0.1"
log = "0.4"
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-indicatif = "0.3"
bumpalo = { version = "3", features = ["collections"] }
memmap2 = "0.9"
vek = { version = "0.17", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
aho-corasick = "1"
simdutf8 = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
lz4_flex = "0.11"
zstd = "0.13"
anstream = "0.6"
color-print = "0.3"
clap = { version = "4", features = ["derive", "color", "string"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"


# ──────────────────────────────────────────────────────────────────────────────
# Silence false-positive warnings from `multiversion` about its retpoline cfg.
# Noise from the crate itself, not our code.
# ──────────────────────────────────────────────────────────────────────────────
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(retpoline)',
  'cfg(retpoline, values("indirect-branches", "indirect-calls"))',
] }

# ──────────────────────────────────────────────────────────────────────────────
# Release: maximum optimisation
# lto = "fat"       → cross-crate inlining of SIMD code
# codegen-units = 1 → one CGU, best inlining
# panic = "abort"   → drop unwind overhead
# strip = "symbols" → smaller binary
# ──────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# Dev dependencies stay optimised (rayon, wide are noticeably faster).
[profile.dev.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 3
